fixed a bug with counter overlapping with the nav

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,8 @@
 nav {
   position: sticky;
   top: 0;
-  height: 100;
+  height: 90;
+  z-index: 2;
   width: 100%;
   background-color:  #d29b30;
   color: white ;
